spacing between containers better. need to fix attendee overflow

--- a/react-app/src/components/EventPage/EventPage.css
+++ b/react-app/src/components/EventPage/EventPage.css
@@ -1,8 +1,8 @@
 .Event-Page-Container {
 	max-height: 98vh;
 	display: grid;
-	grid-template-columns: 40vw 18vw 30vw;
-	grid-template-rows: 300px 20vh 45vh;
+	grid-template-columns: 32rvw 12rvw 40rvw;
+	grid-template-rows: 300px 20rvh 45rvh;
 	grid-template-areas:
 		"event-detail attendee-detail attendees-list"
 		"event-detail create-attendee-button attendees-list"
@@ -11,20 +11,24 @@
 
 .event-text-center {
 	grid-area: event-detail;
+	margin: 10px;
 }
 
 #AttendeeButton {
 	grid-area: create-attendee-button;
 	max-width: 300px;
 	max-height: 60px;
+	margin: 10px;
 }
 
 .event-text-center {
 	grid-area: event-detail;
+	margin: 10px;
 }
 
 .attendee-text-center {
 	grid-area: attendee-detail;
+	margin: 10px;
 }
 
 .attendees-accordion-container {
@@ -34,4 +38,5 @@
 
 .row {
 	grid-area: menu-plan-and-items;
+	margin: 10px;
 }
